--- a/styles/globals.css
+++ b/styles/globals.css
@@ -4,6 +4,8 @@ body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  background-color: #f2f2f2;
+  margin-bottom: 10rem;
 }
 
 a {
@@ -13,4 +15,84 @@ a {
 
 * {
   box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+input {
+  outline: none;
+  border: none;
+  background-color: #f2f2f2;
+  padding: 0.5rem 1rem;
+  border-radius: 1rem;
+}
+
+.search-bar {
+  position: fixed;
+  padding: 1rem 2rem;
+  background-color: white;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.logo {
+  width: 3rem;
+  height: 1.5rem;
+}
+
+.product-list {
+  padding: 0 0.5rem;
+  padding-top: 5rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.product-item {
+  background-color: white;
+  padding: 0.5rem;
+  border-radius: 1rem;
+  width: calc(50% - 0.5rem);
+  margin-top: 1rem;
+}
+
+.product-item p {
+  margin-left: 5px;
+}
+
+.product-text {
+  font-size: 14px;
+  display: flex;
+  align-items: center;
+  padding: 0 0.5rem;
+}
+.product-text img {
+  width: 38px;
+  height: 15px;
+}
+
+.product-text p {
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
+}
+
+.clear-input {
+  position: absolute;
+  width: 1.5rem;
+  height: 1.5rem;
+  right: 0;
+  top: 50%;
+  transform: translateY(-50%);
+  right: 5px;
+}
+
+.input-content {
+  position: relative;
+}
+.imglink {
+  border-radius: 1rem;
 }
