--- a/styles/globals.css
+++ b/styles/globals.css
@@ -42,10 +42,12 @@ input {
   width: 3rem;
   height: 1.5rem;
 }
+.container-list {
+  padding-top: 5rem;
+}
 
 .product-list {
   padding: 0 0.5rem;
-  padding-top: 5rem;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -66,6 +68,9 @@ input {
   display: flex;
   align-items: center;
   padding: 0 0.5rem;
+  line-height: 16px;
+  height: 32px;
+  overflow: hidden;
 }
 .product-text img {
   width: 38px;
@@ -73,9 +78,6 @@ input {
 }
 
 .product-text p {
-  text-overflow: ellipsis;
-  white-space: nowrap;
-  overflow: hidden;
 }
 
 .clear-input {
@@ -100,4 +102,15 @@ input {
   border-radius: 1rem;
   width: 140px;
   height: 140px;
+}
+
+.invite-friends {
+  padding-left: 1rem;
+  padding-right: 1rem;
+  font-style: italic;
+}
+
+.install-app {
+  color: blue;
+  font-weight: 500;
 }
